[metadata]
name = ibek
description = IOC Builder for EPICS and Kubernetes
url = https://github.com/epics-containers/ibek
author = Tom Cobb
author_email = tom.cobb@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src

setup_requires =
    setuptools_scm[toml]>=6.2
    
install_requires =
     typing-extensions
     apischema>=0.15
     typer
     ruamel.yaml
     jsonschema
     jinja2

[options.extras_require]
# For development tests/docs
dev =
    black==22.3.0
    flake8-isort
    isort>5.0
    mypy
    pre-commit
    pytest-cov
    sphinx-rtd-theme-github-versions
    tox
    setuptools_scm[toml]>=6.2
    types-mock
    sphinx-rtd-theme-github-versions
    sphinx-apischema

[options.packages.find]
where = src
# Don't include our tests directory in the distribution
exclude = tests

# Specify any package data to be included in the wheel below.
[options.package_data]
ibek =
    helm-template/*/*
    helm-template/*
    templates/*

[options.entry_points]
# Include a command line script
console_scripts =
    ibek = ibek.__main__:cli

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
profile=black
float_to_top=true
skip=setup.py,conf.py,build

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,  # support typing.overload decorator
    F722,  # allow Annotated[typ, some_func("some string")]
exclude =
    ui_*
    .tox
    .venv

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=ibek --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = error

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version.py
data_file = /tmp/ibek.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/

# Use tox to provide parallel linting and testing
# NOTE that we pre-install all tools in the dev dependencies (including tox).
# Hence the use of allowlist_externals instead of using the tox virtualenvs.
# This ensures a match between developer time tools in the IDE and tox tools.
[tox:tox]
minversion = 3.7
skipsdist=true
skipinstall=true

[testenv:{pre-commit,mypy,pytest,docs}]
setenv =
    QT_QPA_PLATFORM = offscreen
allowlist_externals = 
    pytest 
    pre-commit
    mypy
    sphinx-build
commands =
    pytest: pytest tests {posargs}
    mypy: mypy src tests {posargs}
    pre-commit: pre-commit run --all-files {posargs}
    docs: sphinx-build -EWT --keep-going docs build/html {posargs} 
